--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Processor Visualiser</title>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--  <head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Processor Visualiser</title>-->
+<!--    <link rel="stylesheet" href="proc_vis.css">-->
+<!--  </head>-->
+<!--  <body>-->
     <link rel="stylesheet" href="proc_vis.css">
-  </head>
-  <body>
     <div class="box">
       <svg id="cpu-svg" xmlns="http://www.w3.org/2000/svg" width="870px" height="695px">
         <g transform="translate(10,10)">
@@ -297,5 +298,5 @@
 
       Operands labeled $x refer to a memory address (in hex)
     </div>
-  </body>
-</html>
+<!--  </body>-->
+<!--</html>-->
