Fixed some defaults cursors and background colours

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <polyline id="ins-line2" class="line data" points="0,6 25,6"/>
               <polyline id="ins-line1" class="line data" points="0,10 25,10"/>
               <polyline id="ins-line0" class="line data" points="0,14 25,14"/>
-              <g transform="translate(25,-50)" id="g-reg-ins">
+              <g transform="translate(25,-50)" id="g-reg-ins" class="g-reg">
                 <rect id="svg-reg-ins" class="register" height="100px" width="50px"/>
                 <text class="label small" y="22.5" x="2" rotate="90">S</text>
                 <text id="ins-value" class="label" x="50" y="-25" transform="rotate(90)" text-anchor="middle"
@@ -57,7 +57,7 @@
               <polyline id="pc-ctrl-s" class="line control" points="0,-4 25,-4"/>
               <polyline id="pc-ctrl-e" class="line control" points="0,0 25,0"/>
               <polyline id="pc-ctrl-i" class="line control" points="0,4 25,4"/>
-              <g transform="translate(25,-25)" id="g-reg-pc">
+              <g transform="translate(25,-25)" id="g-reg-pc" class="g-reg">
                 <rect id="svg-reg-pc" class="register" height="100px" width="50px"/>
                 <text class="label small" x="2" y="17" rotate="90">S</text>
                 <text class="label small" x="2" y="23" rotate="90">E</text>
@@ -110,7 +110,7 @@
             </g>
           </g>
 
-          <g transform="translate(200,25)" id="g-reg-a">
+          <g transform="translate(200,25)" id="g-reg-a" class="g-reg">
             <rect id="svg-reg-a" class="register" height="50px" width="100px"/>
             <text class="label small" x="19" y="48">S</text>
             <text class="label small" x="25" y="48">E</text>
@@ -120,7 +120,7 @@
           </g>
           <!--        <rect id="svg-reg-a" class="register" height="50px" width="100px" x="200px" y="25px"/>-->
 
-          <g transform="translate(325,25)" id="g-reg-b">
+          <g transform="translate(325,25)" id="g-reg-b" class="g-reg">
             <rect id="svg-reg-b" class="register" height="50px" width="100px"/>
             <text class="label small" x="19" y="48">S</text>
             <text class="label small" x="25" y="48">E</text>
@@ -154,7 +154,7 @@
               <path id="t2-line0" class="line data" d="m  14 0 v 25"/>
             </g>
 
-            <g transform="translate(0,25)" id="g-reg-t1">
+            <g transform="translate(0,25)" id="g-reg-t1" class="g-reg">
               <rect id="svg-reg-t1" class="register" height="50px" width="100px"/>
               <text class="label small" x="22" y="9">S</text>
               <text id="t1-value" class="label" x="50" y="25" text-anchor="middle" alignment-baseline="central">
@@ -163,7 +163,7 @@
               <text class="label small" x="50" y="40" text-anchor="middle" transform="">Math Register T1</text>
             </g>
             <!--          <rect id="svg-reg-t1" class="register" height="50px" width="100px" x="0" y="25px"/>-->
-            <g transform="translate(125,25)" id="g-reg-t2">
+            <g transform="translate(125,25)" id="g-reg-t2" class="g-reg">
               <rect id="svg-reg-t2" class="register" height="50px" width="100px"/>
               <text class="label small" x="22" y="9">S</text>
               <text id="t2-value" class="label" x="50" y="25" text-anchor="middle" alignment-baseline="central">
@@ -204,7 +204,7 @@
               <path id="addr-line0" class="line address" d="m 0 14 h 25"/>
             </g>
 
-            <g transform="translate(0,425)" id="g-reg-addr">
+            <g transform="translate(0,425)" id="g-reg-addr" class="g-reg">
               <rect id="svg-reg-addr" class="register" height="100px" width="50px"/>
               <text class="label small" x="2" y="72" rotate="90">S</text>
               <text id="addr-value" class="label" x="50" y="-25" transform="rotate(90)" text-anchor="middle"
