Fixed numbers and arithmetic

--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@
               <path id="alu-ctrl-1" class="line control" d="m 0 -8 h 200"/>
               <path id="alu-ctrl-0" class="line control" d="m 0 -4 h 200"/>
 
-              <path id="flgs-3" class="line data" d="m 0 4 h 200"/>
-              <path id="flgs-2" class="line data" d="m 0 8 h 200"/>
               <path id="flgs-1" class="line data" d="m 0 12 h 200"/>
-              <path id="flgs-0" class="line data" d="m 0 16 h 200"/>
+              <path id="flgs-0" class="line data" d="m 0 20 h 200"/>
             </g>
 
             <g transform="translate(100,212.5)">
@@ -221,15 +219,12 @@
             </g>
             <text class="label large" x="190px" y="35px" text-anchor="middle">RAM</text>
           </g>
-          <g transform="translate(100,352)">
-            <text class="label small" rotate="-90" text-anchor="middle" y="-12">0</text>
-            <text class="label small" rotate="-90" text-anchor="middle" y="-8">1</text>
-            <text class="label small" rotate="-90" text-anchor="middle" y="-4">2</text>
-
-            <text class="label small" rotate="-90" text-anchor="middle" y="4">Z</text>
-            <text class="label small" rotate="-90" text-anchor="middle" y="8">S</text>
-            <text class="label small" rotate="-90" text-anchor="middle" y="12">O</text>
-            <text class="label small" rotate="-90" text-anchor="middle" y="16">C</text>
+          <g transform="translate(235,340) rotate(57.995)">
+            <text class="label small" text-anchor="middle" alignment-baseline="central">Op Code</text>
+          </g>
+          <g transform="translate(97,362)">
+            <text class="label small" text-anchor="end" alignment-baseline="central" y="0">Zero</text>
+            <text class="label small" text-anchor="end" alignment-baseline="central" y="8">Sign</text>
           </g>
           <g transform="translate(0,575)"> <!-- Clock -->
             <path id="clock-line" d="m 50 0 v 25" class="line data"/>
